--- a/band-eng.html
+++ b/band-eng.html
@@ -18,16 +18,16 @@
 	  <img src="images/Groovocado-Logotip-Horizontalen-Bel.png" class='img-menu-web'>
       <nav>
         <ul class='meni'>
-          <li><a href="events.html" class='meni-gumb'>Koncerti</a></li>
-          <li><a href="band.html" class='meni-gumb'>Band</a></li>
-          <li><a href="contact.html" class='meni-gumb'>Kontakt</a></li>
-          <li><a href="media.html" class='meni-gumb'>Za medije</a></li>
+          <li><a href="events-eng.html" class='meni-gumb'>Concerts</a></li>
+          <li><a href="band-eng.html" class='meni-gumb'>Band</a></li>
+          <li><a href="contact-eng.html" class='meni-gumb'>Contact</a></li>
+          <li><a href="media-eng.html" class='meni-gumb'>Media</a></li>
         </ul>
       </nav>
     </aside>
     <main>
       <div>
-        <a href="band-eng.html" class='lang'>EN</a>
+        <a href="band.html" class='lang'>SI</a>
       </div>
       <div>
         <img class='img-main-logo'  src="images/Groovocado-Logotip-Vertikalen-Crn.png">
@@ -37,32 +37,32 @@
       <div class="fotka-clana">
             <img src="images/photo-monika.jpg"  class='photo'>
             <h3>Monika Mulec</h3>
-            <h4>Vokal</h4>
+            <h4>Vocal</h4>
       		<div class="container">
       <h2>Monika Mulec</h2>
-      <h5>Vokal</h5>
-      <p>Skozi uporniško fazo najstniškega rockovstva je prišla do zaključka, da je edina prava muzika, party muzika. Zdaj obožuje tudi ABBO.</p>
+      <h5>Vocal</h5>
+      <p>Through a rebelious teenage rock phase, she has come to agree, that the best music, is party music. Now, she even likes ABBA!</p>
       </div>
       	</div>
 
       <div class="fotka-clana">
               <img src="images/photo-tina.jpg"  class='photo'>
               <h3>Tina Ritlop</h3>
-              <h4>Vokal</h4>
+              <h4>Vocal</h4>
         		<div class="container">
               <h2>Tina Ritlop</h2>
-        	  <h5>Vokal</h5>
-        	  <p>ko ves band je že zbran, potrebuje le še veganski sopran. Ob tuljenju volkov in skovikanju sov se je Tina naučila kako narediti dober šov! </p>
+        	  <h5>Vocal</h5>
+        	  <p>When the band is gathered 'round, all it needs is a vegano soprane! By listening to wolves and owels she learned how to...moan? </p>
         </div>
     	</div>
 
       <div class="fotka-clana">
             <img src="images/photo-saso.jpg"  class='photo'>
             <h3>Sašo Fekonja</h3>
-            <h4>Saks</h4>
+            <h4>Saxophone</h4>
       		<div class="container">
             <h2>Sašo Fekonja</h2>
-      	  <h5>Saks.</h5>
+      	  <h5>Saxophone</h5>
       	  <p>Očitno magisterij iz saksa še vedno ni dovolj za punce. </p>
          </div>
       	</div>
@@ -70,10 +70,10 @@
       <div class="fotka-clana">
             <img src="images/photo-gregor.jpg"  class='photo'>
               <h3>Grega Preložnik</h3>
-              <h4>Trobenta, vokal</h4>
+              <h4>Trumpet, vocals</h4>
       		<div class="container">
             <h2>Grega Preložnik</h2>
-      	  <h5>Truba, vokal</h5>
+      	  <h5>Trumpet, vocals</h5>
       	  <p>Izhaja iz plemena pohorskih samurajev Kišank. Ker lov na divje merjasce več ni zadostil njegovim potrebam po umetniškem izražanju, je začel igrat trobento. On ni pridobil nič, merjasci mnogo, svet pa je pridobil krasnega trobentarja.</p>
       </div>
       	</div>
@@ -81,10 +81,10 @@
       <div class="fotka-clana">
             <img src="images/photo-maki.jpg"  class='photo'>
             <h3>Marko Makuc - Maki</h3>
-              <h4>Dolga truba</h4>
+              <h4>Trombone</h4>
       		<div class="container">
             <h2>Marko Makuc - Maki</h2>
-      	  <h5>Pozavna</h5>
+      	  <h5>Trombone</h5>
       	  <p>Na začetku je bil le kepica brade in frizure. Ko je odkril čare pozavne, so čari pozavne padli v krizo identitete in kupili poršeja.</p>
            </div>
       	</div>
@@ -92,20 +92,20 @@
 	<div class="fotka-clana">
       <img src="images/photo-nejc.jpg"  class='photo'>
       <h3>Nejc Kosanič</h3>
-      <h4>Kitara</h4>
+      <h4>Guitar</h4>
 		<div class="container">
 <h2>Nejc Kosanič</h2>
-<h5>Kitara</h5>
+<h5>Guitar</h5>
 		 <p>62. reinkarnacija Jezusa. Potem ko je z 60. in 61. reinkarnacijo šlo močno narobe, je Nejc predstavnik nove, moderne dobe Jezusovih reinkarnacij.</p>
        </div>
 	</div>
 	<div class="fotka-clana">
       <img src="images/photo-rok.jpg"  class='photo'>
       <h3>Rok Šeško</h3>
-      <h4>Bas kitara</h4>
+      <h4>Bass guitar</h4>
 		<div class="container">
 <h2>Rok Šeško</h2>
-<h5>Bas kitara</h5>
+<h5>Bass guitar</h5>
 <p>Podobno kot Superman je prišel na svet da bi ga rešil ali vsaj naredil boljšega. Kmalu je obupal in začel igrat bas kitaro. Svet je ostal tak kot je. </p>
 </div>
 	</div>
@@ -113,10 +113,10 @@
 <div class="fotka-clana">
       <img src="images/photo-tine.jpg"  class='photo'>
       <h3>Tine Brglez</h3>
-      <h4>Klavir, vokal</h4>
+      <h4>Piano, vocals</h4>
 		<div class="container">
             <h2>Tine Berglez</h2>
-			<h5>Kak sn doer, ne. Klavir.</h5>
+			<h5>Piano, vocals</h5>
 			<p>Ne hvali se s tem, da koristi glasbila Yamaha. S tem se ne hvali niti Yamaha.
 </p>
 
@@ -126,10 +126,10 @@
 <div class="fotka-clana">
       <img src="images/photo-jure.jpg"  class='photo'>
       <h3>Jure Skaza</h3>
-      <h4>Bobni, vokal</h4>
+      <h4>Drums, vocals</h4>
 		<div class="container">
       <h2>Jure Skaza</h2>
-	  <h5>Dobni, vokal</h5>
+	  <h5>Drums, vocals</h5>
 	  <p>Nastal je iz smeha. V svojem genu ima poseben gen, »fotoGEN«, kar lahko opazite na neštetih slikah. Zavidajo mu tako manekenke kot tudi womanekenke.</p>
       </div>
 </div>
