--- a/events-eng.html
+++ b/events-eng.html
@@ -19,16 +19,16 @@
 
       <nav>
         <ul class='meni'>
-          <li><a href="events.html" class='meni-gumb'>Koncerti</a></li>
-          <li><a href="band.html" class='meni-gumb'>Band</a></li>
-          <li><a href="contact.html" class='meni-gumb'>Kontakt</a></li>
-          <li><a href="media.html" class='meni-gumb'>Za medije</a></li>
+          <li><a href="events-eng.html" class='meni-gumb'>Concerts</a></li>
+          <li><a href="band-eng.html" class='meni-gumb'>Band</a></li>
+          <li><a href="contact-eng.html" class='meni-gumb'>Contact</a></li>
+          <li><a href="media-eng.html" class='meni-gumb'>Media</a></li>
         </ul>
       </nav>
     </aside>
     <main>
       <div>
-        <a href="events-eng.html" class='lang'>EN</a>
+        <a href="events.html" class='lang'>SI</a>
       </div>
       <div>
         <img class='img-main-logo' style="width:50vh;heighft:auto;" src="images/Groovocado-Logotip-Vertikalen-Crn.png">
@@ -38,12 +38,12 @@
     <div class='photo-grid-dogodek'>
 	 <div class="dogodek">
 		<div class="opis-dogodka">
-			<h2>trenutno ni napovedanih novih koncertov</h2>
-        	</div>
+			<h2>No new concerts at this moment!</h2>
+          </div>
      	 </div>
 	 </div>
 
-   <h1>Pretekli koncerti</h1>
+   <h1>Previous concerts</h1>
 
  <div class='photo-grid'>
 
