--- a/index-eng.html
+++ b/index-eng.html
@@ -8,18 +8,18 @@
 <title>Groovocado</title>
   </head>
   <body>
-<div>
-  <a href="index-eng.html" class='lang'>EN</a>
-</div>
+    <div>
+      <a href="index.html" class='lang'>SI</a>
+    </div>
 	<div id="myNav" class="overlay">
 
   <div class="overlay-content">
     <nav>
       <ul class='meni'>
-        <li><a href="events.html" class='meni-gumb'>Koncerti</a></li>
+        <li><a href="events.html" class='meni-gumb'>Concerts</a></li>
         <li><a href="band.html" class='meni-gumb'>Band</a></li>
-        <li><a href="contact.html" class='meni-gumb'>Kontakt</a></li>
-        <li><a href="media.html" class='meni-gumb'>Za medije</a></li>
+        <li><a href="contact.html" class='meni-gumb'>Contact</a></li>
+        <li><a href="media.html" class='meni-gumb'>Media</a></li>
       </ul>
     </nav>
   </div>
@@ -37,7 +37,7 @@ function closeNav() {
      <main>
 
 	 <div>
-		<span style="font-size:30px;cursor:pointer" onclick="openNav()"> <img class='img-main-logo1' style="width:50vh;height:auto;" src="images/groovocado-logotip-belaSenca-transp.png"></span>
+		<span style="font-size:30px;cursor:pointer" onclick="openNav()"> <img class='img-main-logo1' style="width:50vh;heighft:auto;" src="images/groovocado-logotip-belaSenca-transp.png"></span>
 	</div>
 
 
