--- a/media-eng.html
+++ b/media-eng.html
@@ -19,16 +19,16 @@
 
       <nav>
         <ul class='meni'>
-          <li><a href="events.html" class='meni-gumb'>Koncerti</a></li>
-          <li><a href="band.html" class='meni-gumb'>Band</a></li>
-          <li><a href="contact.html" class='meni-gumb'>Kontakt</a></li>
-          <li><a href="media.html" class='meni-gumb'>Za medije</a></li>
+          <li><a href="events-eng.html" class='meni-gumb'>Concerts</a></li>
+          <li><a href="band-eng.html" class='meni-gumb'>Band</a></li>
+          <li><a href="contact-eng.html" class='meni-gumb'>Contact</a></li>
+          <li><a href="media-eng.html" class='meni-gumb'>Media</a></li>
         </ul>
       </nav>
     </aside>
     <main>
       <div>
-        <a href="media-eng.html" class='lang'>EN</a>
+        <a href="media.html" class='lang'>SI</a>
       </div>
       <div>
         <img class='img-main-logo' style="width:50vh;heighft:auto;" src="images/Groovocado-Logotip-Vertikalen-Crn.png">
@@ -36,12 +36,12 @@
 
       <div class='media-cgp'>
 
-        <a class='linktext' href="images/Groovocado-Tech_Rider.pdf" target="_blank" download="images/Groovocado-Tech_Rider.pdf"><img class='media-logo' src="images/pdf-file-format-symbol.svg"><p>Tehnični rajder </p></a>
-        <a class='linktext' href="images/Groovocado-opis.pdf" target="_blank" download="images/Groovocado-opis.pdf"><img class='media-logo' src="images/pdf-file-format-symbol.svg"><p>Opis benda</p></a>
-        <a class='linktext' href="images/groovocado-logotip-belaSenca-transp.png" target="_blank" download="images/groovocado-logotip-belaSenca-transp.png"><img class='media-logo' src="images/svg-file-format-variant.svg"><p>Logo vertikalen </p></a>
-        <a class='linktext' href="images/Groovocado-Logotip-Horizontalen-Bel.png" target="_blank" download="images/Groovocado-Logotip-Horizontalen-Bel.png"><img class='media-logo' src="images/svg-file-format-variant.svg"><p>Logo horizontalen </p></a>
-        <a class='linktext' href="images/Groovocado-Skupinska.jpg" target="_blank" download="images/Groovocado-Skupinska.jpg"><img class='media-logo' src="images/jpg-file-format-variant.svg"><p>Skupinska fotka</p></a>
-        <a class='linktext' href="images/Groovocado-Skupinska-zNapisom.jpg" target="_blank" download="images/Groovocado-Skupinska-zNapisom.jpg"><img class='media-logo' src="images/jpg-file-format-variant.svg"><p>Skupinska fotka z logotom</p></a>
+        <a class='linktext' href="images/Groovocado-Tech_Rider.pdf" target="_blank" download="images/Groovocado-Tech_Rider.pdf"><img class='media-logo' src="images/pdf-file-format-symbol.svg"><p>Technical description</p></a>
+        <a class='linktext' href="images/Groovocado-opis.pdf" target="_blank" download="images/Groovocado-opis.pdf"><img class='media-logo' src="images/pdf-file-format-symbol.svg"><p>Bend description (SI)</p></a>
+        <a class='linktext' href="images/groovocado-logotip-belaSenca-transp.png" target="_blank" download="images/groovocado-logotip-belaSenca-transp.png"><img class='media-logo' src="images/svg-file-format-variant.svg"><p>Vertical logo</p></a>
+        <a class='linktext' href="images/Groovocado-Logotip-Horizontalen-Bel.png" target="_blank" download="images/Groovocado-Logotip-Horizontalen-Bel.png"><img class='media-logo' src="images/svg-file-format-variant.svg"><p>Horizontal logo </p></a>
+        <a class='linktext' href="images/Groovocado-Skupinska.jpg" target="_blank" download="images/Groovocado-Skupinska.jpg"><img class='media-logo' src="images/jpg-file-format-variant.svg"><p>Group photo</p></a>
+        <a class='linktext' href="images/Groovocado-Skupinska-zNapisom.jpg" target="_blank" download="images/Groovocado-Skupinska-zNapisom.jpg"><img class='media-logo' src="images/jpg-file-format-variant.svg"><p>Group photo /w logo</p></a>
         <a class='linktext' href="images/Groovocado-PromoVideo-1.mp4" target="_blank" download="images/Groovocado-PromoVideo-1.mp4"><img class='media-logo' src="images/mp4-music-file-format.svg"><p>Promo video 1</p></a>
         <a class='linktext' href="images/Groovocado-PromoVideo-2.mp4" target="_blank" download="images/Groovocado-PromoVideo-2.mp4"><img class='media-logo' src="images/mp4-music-file-format.svg"><p>Promo video 2</p></a>
       </div>
