--- a/contact-eng.html
+++ b/contact-eng.html
@@ -19,16 +19,16 @@
 
       <nav>
         <ul class='meni'>
-          <li><a href="events.html" class='meni-gumb'>Koncerti</a></li>
-          <li><a href="band.html" class='meni-gumb'>Band</a></li>
-          <li><a href="contact.html" class='meni-gumb'>Kontakt</a></li>
-          <li><a href="media.html" class='meni-gumb'>Za medije</a></li>
+          <li><a href="events-eng.html" class='meni-gumb'>Concerts</a></li>
+          <li><a href="band-eng.html" class='meni-gumb'>Band</a></li>
+          <li><a href="contact-eng.html" class='meni-gumb'>Contact</a></li>
+          <li><a href="media-eng.html" class='meni-gumb'>Media</a></li>
         </ul>
       </nav>
     </aside>
     <main>
       <div>
-        <a href="contact-eng.html" class='lang'>EN</a>
+        <a href="contact.html" class='lang'>SI</a>
       </div>
       <div>
         <img class='img-main-logo' style="width:50vh;heighft:auto;" src="images/Groovocado-Logotip-Vertikalen-Crn.png">
@@ -38,8 +38,8 @@
         <p class='opis'> <img src="images/email.svg" style="width:30px;height:auto;margin:15px;vertical-align: middle; "> groovocado@gmail.com
         <img src="images/smartphone.svg" style="width:30px;height:auto;margin:15px;vertical-align: middle; ">Tine: +386 40 977 724
         <img src="images/smartphone.svg" style="width:30px;height:auto;margin:15px;vertical-align: middle; ">Nejc: +386 41 509 565</p>
-        <p style='text-align: right'>Groovocado je eden najbolj zdravih muzikadežev na Zemlji, saj v večjih količinah vsebuje življenjsko esencialna hranila, kot so soul, funk, disco, pop, rokenrol, bisere 80-ih in 90-ih. Poleg tega vsebuje tudi lepe brade, negovane lase in lastnega Jezusa. Blagodejno učinkuje proti stresu, dolgčasu, nelagodju in po zadnjih študijah tudi stanju, imenovanem safr. 9 živahnih glasbenikov bo razmigalo vašo ritko!</p>
-        <p class='opis-konec'>Igramo, v glavnem, povsod! Pripravimo lahko krajše ali daljše nastope po dogovoru, naš trenutni repertoar pa zasega malenkost čez 60 komadov. Za vse nadaljne informacije smo vam na voljo po elektronski pošti oziroma telefonski številki, navedeni zgoraj!</p>
+        <p style='text-align: right'>Groovocado is one of the healthiest ‘musifruits’ on the planet, as large quantities contain all life-essential nutrients, such as soul, funk, disco, pop, rock’n’roll, and 80’s and 90’s gems. It also contains nice beards, well-kempt coifs and their own Jesus. It its effective in battling stress, boredom, unease and, according to recent studies, the human condition called ‘meh’. 9 artists full of life who will get your booty bouncin’! </p>
+        <p class='opis-konec'>We're playing basically everywhere. We can prepare for smaller concerts or make a groovatastic multihour party that's gonna rock your socks off! There is more than 60 songs on our playlist and if you have any other questions, don't shy away from calling us or sending us an email! </p>
       </div>
     </main>
 
