--- a/events-eng.html
+++ b/events-eng.html
@@ -38,7 +38,7 @@
     <div class='photo-grid-dogodek'>
 	 <div class="dogodek">
 		<div class="opis-dogodka">
-			<h2>No new concerts at this moment!</h2>
+			<h2>Like our FACEBOOK page to be informed of new concerts!</h2>
           </div>
      	 </div>
 	 </div>
