--- a/events.html
+++ b/events.html
@@ -38,7 +38,7 @@
     <div class='photo-grid-dogodek'>
 	 <div class="dogodek">
 		<div class="opis-dogodka">
-			<h2>trenutno ni napovedanih novih koncertov</h2>
+			<h2>Poišči nas na facebooku in sledi novim dogodkom!</h2>
         	</div>
      	 </div>
 	 </div>
