--- a/band-eng.html
+++ b/band-eng.html
@@ -52,7 +52,7 @@
         		<div class="container">
               <h2>Tina Ritlop</h2>
         	  <h5>Vocal</h5>
-        	  <p>When the band is gathered 'round, all it needs is a vegano soprane! By listening to wolves and owels she learned how to...moan? </p>
+        	  <p>When the band is gathered 'round, all it needs is a suburban soprane! By listening to wolves and owls she learned how to...moan? </p>
         </div>
     	</div>
 
@@ -63,7 +63,7 @@
       		<div class="container">
             <h2>Sašo Fekonja</h2>
       	  <h5>Saxophone</h5>
-      	  <p>Očitno magisterij iz saksa še vedno ni dovolj za punce. </p>
+      	  <p>Trying to find gold with a metal detector, he has stumbled upon something much, much greater! </p>
          </div>
       	</div>
 
@@ -74,7 +74,7 @@
       		<div class="container">
             <h2>Grega Preložnik</h2>
       	  <h5>Trumpet, vocals</h5>
-      	  <p>Izhaja iz plemena pohorskih samurajev Kišank. Ker lov na divje merjasce več ni zadostil njegovim potrebam po umetniškem izražanju, je začel igrat trobento. On ni pridobil nič, merjasci mnogo, svet pa je pridobil krasnega trobentarja.</p>
+      	  <p></p>
       </div>
       	</div>
 
@@ -85,7 +85,7 @@
       		<div class="container">
             <h2>Marko Makuc - Maki</h2>
       	  <h5>Trombone</h5>
-      	  <p>Na začetku je bil le kepica brade in frizure. Ko je odkril čare pozavne, so čari pozavne padli v krizo identitete in kupili poršeja.</p>
+      	  <p>When born, he was not much more than a little fluffy hairball. But when he discovered the magic of playing trumpet, the magic got lost, fell into a mid-life crises, and bought a Porsche.</p>
            </div>
       	</div>
 
@@ -96,7 +96,7 @@
 		<div class="container">
 <h2>Nejc Kosanič</h2>
 <h5>Guitar</h5>
-		 <p>62. reinkarnacija Jezusa. Potem ko je z 60. in 61. reinkarnacijo šlo močno narobe, je Nejc predstavnik nove, moderne dobe Jezusovih reinkarnacij.</p>
+		 <p>62. Jesus incarnation. After something went wrong with the 60th and 61st, Nejc has become the representative of a modern kind of a Jesus. A funky guitar playing Jesus.</p>
        </div>
 	</div>
 	<div class="fotka-clana">
@@ -106,7 +106,7 @@
 		<div class="container">
 <h2>Rok Šeško</h2>
 <h5>Bass guitar</h5>
-<p>Podobno kot Superman je prišel na svet da bi ga rešil ali vsaj naredil boljšega. Kmalu je obupal in začel igrat bas kitaro. Svet je ostal tak kot je. </p>
+<p>Rok has been born with one purpose and one purpose only: to save the world! But he soon gave up on that idea and picked up a bass guitar. The world remains as it is, but if you listen very closely on a quiet summer night, you can hear the groove comming from everywhere around you.</p>
 </div>
 	</div>
 
@@ -117,7 +117,7 @@
 		<div class="container">
             <h2>Tine Berglez</h2>
 			<h5>Piano, vocals</h5>
-			<p>Ne hvali se s tem, da koristi glasbila Yamaha. S tem se ne hvali niti Yamaha.
+			<p>He is not keen on promoting himself as a Yamaha user. Neither is Yamaha.
 </p>
 
 </div>
@@ -130,7 +130,7 @@
 		<div class="container">
       <h2>Jure Skaza</h2>
 	  <h5>Drums, vocals</h5>
-	  <p>Nastal je iz smeha. V svojem genu ima poseben gen, »fotoGEN«, kar lahko opazite na neštetih slikah. Zavidajo mu tako manekenke kot tudi womanekenke.</p>
+	  <p>Practicaly made of laughter! In his genome he carries a special kind of gene, a PHOTO-gen. Many manequins and womanequins envy him. </p>
       </div>
 </div>
 	</div>
