--- a/band.html
+++ b/band.html
@@ -52,7 +52,7 @@
         		<div class="container">
               <h2>Tina Ritlop</h2>
         	  <h5>Vokal</h5>
-        	  <p>ko ves band je že zbran, potrebuje le še veganski sopran. Ob tuljenju volkov in skovikanju sov se je Tina naučila kako narediti dober šov! </p>
+        	  <p>ko ves band je že zbran, potrebuje le še Hočki sopran. Ob tuljenju volkov in skovikanju sov se je Tina naučila, kako narediti dober šov! </p>
         </div>
     	</div>
 
@@ -63,7 +63,7 @@
       		<div class="container">
             <h2>Sašo Fekonja</h2>
       	  <h5>Saks.</h5>
-      	  <p>Očitno magisterij iz saksa še vedno ni dovolj za punce. </p>
+      	  <p>Z detektorjem kovin je iskal po Dupleku, da bi našel zlato. Zlata žal ni našel, je pa našel nekaj zelo blizu! </p>
          </div>
       	</div>
 
@@ -74,14 +74,14 @@
       		<div class="container">
             <h2>Grega Preložnik</h2>
       	  <h5>Truba, vokal</h5>
-      	  <p>Izhaja iz plemena pohorskih samurajev Kišank. Ker lov na divje merjasce več ni zadostil njegovim potrebam po umetniškem izražanju, je začel igrat trobento. On ni pridobil nič, merjasci mnogo, svet pa je pridobil krasnega trobentarja.</p>
+      	  <p>malo trobi, malo poje. Včasih jazz, včasih prav.</p>
       </div>
       	</div>
 
       <div class="fotka-clana">
             <img src="images/photo-maki.jpg"  class='photo'>
             <h3>Marko Makuc - Maki</h3>
-              <h4>Dolga truba</h4>
+              <h4>Pozavna</h4>
       		<div class="container">
             <h2>Marko Makuc - Maki</h2>
       	  <h5>Pozavna</h5>
