--- a/contact-eng.html
+++ b/contact-eng.html
@@ -35,11 +35,11 @@
       </div>
 
       <div class='kontakt'>
-        <p class='opis'> <img src="images/email.svg" style="width:30px;height:auto;margin:15px;vertical-align: middle; "> groovocado@gmail.com
+        <p class='opis' style='text-align: center'> <img src="images/email.svg" style="width:30px;height:auto;margin:15px;vertical-align: middle; "> groovocado@gmail.com
         <img src="images/smartphone.svg" style="width:30px;height:auto;margin:15px;vertical-align: middle; ">Tine: +386 40 977 724
         <img src="images/smartphone.svg" style="width:30px;height:auto;margin:15px;vertical-align: middle; ">Nejc: +386 41 509 565</p>
-        <p style='text-align: right'>Groovocado is one of the healthiest ‘musifruits’ on the planet, as large quantities contain all life-essential nutrients, such as soul, funk, disco, pop, rock’n’roll, and 80’s and 90’s gems. It also contains nice beards, well-kempt coifs and their own Jesus. It its effective in battling stress, boredom, unease and, according to recent studies, the human condition called ‘meh’. 9 artists full of life who will get your booty bouncin’! </p>
-        <p class='opis-konec'>We're playing basically everywhere. We can prepare for smaller concerts or make a groovatastic multihour party that's gonna rock your socks off! There is more than 60 songs on our playlist and if you have any other questions, don't shy away from calling us or sending us an email! </p>
+        <p style='text-align: justify'>Groovocado is one of the healthiest ‘musifruits’ on the planet, as large quantities contain all life-essential nutrients, such as soul, funk, disco, pop, rock’n’roll, and 80’s and 90’s gems. It also contains nice beards, well-kempt coifs and their own Jesus. It its effective in battling stress, boredom, unease and, according to recent studies, the human condition called ‘meh’. 9 artists full of life who will get your booty bouncin’! </p>
+        <p class='opis-konec' style='text-align: justify'>We're playing basically everywhere. We can prepare for smaller concerts or make a groovatastic multihour party that's gonna rock your socks off! There is more than 60 songs on our playlist and if you have any other questions, don't shy away from calling us or sending us an email! </p>
       </div>
     </main>
 
