--- a/contact.html
+++ b/contact.html
@@ -35,11 +35,11 @@
       </div>
 
       <div class='kontakt'>
-        <p class='opis'> <img src="images/email.svg" style="width:30px;height:auto;margin:15px;vertical-align: middle; "> groovocado@gmail.com
-        <img src="images/smartphone.svg" style="width:30px;height:auto;margin:15px;vertical-align: middle; ">Tine: +386 40 977 724
-        <img src="images/smartphone.svg" style="width:30px;height:auto;margin:15px;vertical-align: middle; ">Nejc: +386 41 509 565</p>
-        <p style='text-align: right'>Groovocado je eden najbolj zdravih muzikadežev na Zemlji, saj v večjih količinah vsebuje življenjsko esencialna hranila, kot so soul, funk, disco, pop, rokenrol, bisere 80-ih in 90-ih. Poleg tega vsebuje tudi lepe brade, negovane lase in lastnega Jezusa. Blagodejno učinkuje proti stresu, dolgčasu, nelagodju in po zadnjih študijah tudi stanju, imenovanem safr. 9 živahnih glasbenikov bo razmigalo vašo ritko!</p>
-        <p class='opis-konec'>Igramo, v glavnem, povsod! Pripravimo lahko krajše ali daljše nastope po dogovoru, naš trenutni repertoar pa zasega malenkost čez 60 komadov. Za vse nadaljne informacije smo vam na voljo po elektronski pošti oziroma telefonski številki, navedeni zgoraj!</p>
+        <p class='opis' style='text-align: left'> <img src="images/email.svg" style="width:30px;height:auto;margin:15px;vertical-align: middle;text-align: center ">groovocado@gmail.com</p>
+        <p style='text-align: left'><img src="images/smartphone.svg" style="width:30px;height:auto;margin:15px;vertical-align: middle;   ">Tine: +386 40 977 724</p>
+        <p style='text-align: left'><img src="images/smartphone.svg" style="width:30px;height:auto;margin:15px;vertical-align: middle;">Nejc: +386 41 509 565</p>
+        <p style='text-align: justify'>Groovocado je eden najbolj zdravih muzikadežev na Zemlji, saj v večjih količinah vsebuje življenjsko esencialna hranila, kot so soul, funk, disco, pop, rokenrol, bisere 80-ih in 90-ih. Poleg tega vsebuje tudi lepe brade, negovane lase in lastnega Jezusa. Blagodejno učinkuje proti stresu, dolgčasu, nelagodju in po zadnjih študijah tudi stanju, imenovanem safr. 9 živahnih glasbenikov bo razmigalo vašo ritko!</p>
+        <p class='opis-konec' style='text-align: justify'>Pripravimo lahko krajše ali daljše nastope po dogovoru, naš trenutni repertoar pa zasega malenkost čez 60 komadov. Za vse nadaljne informacije smo vam na voljo po elektronski pošti oziroma telefonski številki, navedeni zgoraj!</p>
       </div>
     </main>
 
